<resources>
    <string name="app_name">OutPlay</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pokyn1">To join an existing game, click on the join button. You can then scan the QR code and start playing.</string>
    <string name="pokyn2">To create a new game and then invite other players, click on the create game button.</string>
    <string name="pokyn3">Also don\'t forget to type your desired in-game name in the input field below</string>
    <string name="join">Join Game</string>
    <string name="NewGame">New game</string>
    <string name="menu_home">Outplay</string>
    <string name="menu_gallery">Guide</string>
    <string name="menu_slideshow">Settings</string>
    <string name="music">Music</string>
    <string name="language">Language</string>
    <string name="English">English</string>
    <string name="Czech">Czech</string>
    <string name="Germany">Germany</string>
    <string name="Interact">Interact</string>
    <string name="team_capture">capture</string>
    <string name="team_eliminate">eliminate</string>
    <string name="go">Continue</string>
    <string name="playername">Enter your in-game name</string>
    <string name="zprava1">Waiting for host to start the game....</string>
    <string name="zprava2">Your name should be on the host screen</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>

    <string-array name="ListLanguage">
        <item>English</item>
        <item>Czech</item>
        <item>Germany</item>
    </string-array>

</resources>