<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        >

    <TextView
        android:id="@+id/text_home3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/pokyn1"
        android:paddingVertical="10dp"
     />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingVertical="10dp"
            />

        <TextView
            android:id="@+id/text_home2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/pokyn2"
            android:paddingVertical="10dp"
            />



        <Button
            android:id="@+id/NewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewGame"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingVertical="10dp"
         />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>